# django-lgi

./: .pre-commit-config.yaml  LICENSE  README.md  lgi.py  pyproject.toml  tox.ini
.github/workflows/: main.yml
tests/: runtests.py  tests.py  urls.py
